--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                     <div class="customer-thumbnail">
                         <img src="images/customer/customer-3.png" alt="">
                         <div class="customer-info">
-                            <h4>Farhan Khaliq</h4>
+                            <h4>Farhan Khalid</h4>
                             <p>Content Creator</p>
                         </div>
                     </div>
