--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <section class="top-customers">
             <div class="left-box">
                 <h2>Customers</h2>
-                <p>Who believed in Us</p>
+                <p>Who believes in Us</p>
             </div>
             <div class="customers">
                 <div class="customer">
